--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <img src="images/main_photo.jpeg" alt="logo">
             </div>
             <div class="site-title-block">
-                <h2>Olya Zelenyak</h2>
+                <h2>Volha Zelianiak</h2>
             </div>
             <div class="site-nav">
                 <ul id="nav" class="site-main-menu site-auto-menu one-page-menu">
@@ -36,9 +36,9 @@
                 <a href="https://www.linkedin.com/in/volha-zelianiak-01a3b6bb/" target="_blank">
                     <i class="fa fa-linkedin"></i>
                 </a>
-                <a href="https://www.facebook.com/olya.zelenyak.7/" target="_blank">
-                    <i class="fa fa-facebook-f"></i>
-                </a>
+<!--                <a href="https://www.facebook.com/olya.zelenyak.7/" target="_blank">-->
+<!--                    <i class="fa fa-facebook-f"></i>-->
+<!--                </a>-->
             </div>
         </div>
 
@@ -55,7 +55,7 @@
                         <div class="inner-content">
                             <div class="text-block">
                                 <div class="hint">Full stack developer</div>
-                                <h1>Olya Zelenyak</h1>
+                                <h1>Volha Zelianiak</h1>
                                 <div class="text-info">
                                     Experienced and smart Software Engineer with more than 5 years of full stack
                                     development
@@ -133,23 +133,33 @@
                             <div class="timeline-block">
                                 <div class="timeline-item ">
                                     <div class="left-part">
-                                        <h5 class="item-period">2020 - Present</h5>
-                                        <span class="item-company">Skyeng</span>
+                                        <h5 class="item-period">2021 - Present</h5>
+                                        <span class="item-company">Institute of IT & Business Administration</span>
                                     </div>
                                     <div class="vertical-divider"></div>
                                     <div class="right-part">
-                                        <h4 class="item-title">English, Upper-Intermediate</h4>
+                                        <h4 class="item-title">Spring Framework</h4>
                                     </div>
                                 </div>
                                 <div class="timeline-item ">
                                     <div class="left-part">
-                                        <h5 class="item-period">2021</h5>
+                                        <h5 class="item-period">2021 - Present</h5>
                                         <span class="item-company">TeachMeSkills</span>
                                     </div>
                                     <div class="vertical-divider"></div>
                                     <div class="right-part">
                                         <h4 class="item-title">Frontend Development</h4>
                                         <p class="text-info">HTML/CSS, JavaScript, TypeScript</p>
+                                    </div>
+                                </div>
+                                <div class="timeline-item ">
+                                    <div class="left-part">
+                                        <h5 class="item-period">2020 - Present</h5>
+                                        <span class="item-company">Skyeng</span>
+                                    </div>
+                                    <div class="vertical-divider"></div>
+                                    <div class="right-part">
+                                        <h4 class="item-title">English, Upper-Intermediate</h4>
                                     </div>
                                 </div>
                                 <div class="timeline-item ">
@@ -274,31 +284,31 @@
                                 <div class="-padding-bottom">
                                     <div class="row">
                                         <div class="item-period">HTML/CSS</div>
-                                        <div class="item-company">95%</div>
+                                        <div class="item-company">85%</div>
                                     </div>
-                                    <progress max="100" value="95"></progress>
+                                    <progress max="100" value="85"></progress>
                                 </div>
                                 <div class="-padding-bottom">
                                     <div class="row">
                                         <div class="item-period">TypeScript</div>
-                                        <div class="item-company">60%</div>
-                                    </div>
-                                    <progress max="100" value="60"></progress>
-                                </div>
-                                <div class="-padding-bottom">
-                                    <div class="row">
-                                        <div class="item-period">JavaScript</div>
                                         <div class="item-company">50%</div>
                                     </div>
                                     <progress max="100" value="50"></progress>
                                 </div>
                                 <div class="-padding-bottom">
                                     <div class="row">
-                                        <div class="item-period">Flutter</div>
-                                        <div class="item-company">10%</div>
+                                        <div class="item-period">JavaScript</div>
+                                        <div class="item-company">70%</div>
                                     </div>
-                                    <progress max="100" value="10"></progress>
+                                    <progress max="100" value="70"></progress>
                                 </div>
+                                <!--                                <div class="-padding-bottom">-->
+                                <!--                                    <div class="row">-->
+                                <!--                                        <div class="item-period">Flutter</div>-->
+                                <!--                                        <div class="item-company">10%</div>-->
+                                <!--                                    </div>-->
+                                <!--                                    <progress max="100" value="10"></progress>-->
+                                <!--                                </div>-->
                             </div>
                         </div>
                     </div>
